crates/icydb-core/tests/ui/db_store_module_private.rs
use icydb_core::db::store::StoreRegistry;

fn main() {}
